--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
           <div class="footer__column_content_info">
             <h5 class="footer__column-heading">о Практикуме</h5>
             <nav class="footer__column-links-set">          
-              <h6 class="footer__column-link">Главная</h6>
-              <h6 class="footer__column-link">Концепция</h6>
-              <h6 class="footer__column-link">Наставники</h6>
+              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link">Наставники</a>
            </nav>
           </div>
         <div class="footer__column_content_social">
