--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
    <header class="header">
-      <div class="logo logo_place_header"></div>
+      <div src="images/logo_place_header.svg" class="logo logo_place_header" alt="ya_logo"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <h4 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link">Узнать</a></h4>
       <img src="images/header-image.png" class="header__main-illustration" alt="какой-то пацанчик"> 
@@ -142,7 +142,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copywrite">
-          <img src="images/logo_place_footer.svg" class="logo logo_place_footer">
+          <img src="images/logo_place_footer.svg" class="logo logo_place_footer" alt="ya_logo">
           <h6 class="footer__author"> — &copy;2020. Гантимуров Юрий</h6>
         </div>          
           <div class="footer__column_content_info">
@@ -157,15 +157,15 @@
           <h5 class="footer__column-heading">Соцсети</h5>
           <div class="footer__column-links-set">
             <a href="#" class="footer__column-links"> 
-              <img class="footer__social-icon" src="images/facebook_color_white.svg" alt= "лого">      
+              <img class="footer__social-icon" src="images/facebook_color_white.svg" alt= "fb_logo">      
               <h6 class="footer__column-link footer__column-link_social">Facebook</h6>
             </a>
             <a href="#" class="footer__column-links"> 
-              <img class="footer__social-icon" src="images/vk_color_white.svg" alt= "лого"> 
+              <img class="footer__social-icon" src="images/vk_color_white.svg" alt= "vk_logo"> 
               <h6 class="footer__column-link footer__column-link_social">ВКонтакте</h6>
             </a>
             <a href="#" class="footer__column-links"> 
-              <img class="footer__social-icon" src="images/instagram_color_white.svg" alt= "лого">           
+              <img class="footer__social-icon" src="images/instagram_color_white.svg" alt= "ig_logo">           
               <h6 class="footer__column-link footer__column-link_social">Instagram</h6>
             </a>
           </div>
