--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="content">
       <section class="description">
         <section class="two-columns">
-            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <ul class="two-columns__main-text">
             <li class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренеруемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы.
@@ -135,38 +135,42 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copywrite">
+        <div class="footer__column footer__column_content_copyright">
           <img src="images/logo_place_footer.svg" class="logo logo_place_footer" alt="я_лого">
           <p class="footer__author"> — &copy;2020. Гантимуров Юрий</p>
         </div>          
           <div class="footer__column footer__column_content_info">
             <h5 class="footer__column-heading">о Практикуме</h5>
-            <ul class="footer__column-links">          
-              <li><a class="footer__column-link" href="#">Главная</a></li>
-              <li><a class="footer__column-link" href="#">Концепция</a></li>
-              <li><a class="footer__column-link" href="#">Наставники</a></li>
-            </ul>
+	    <nav>
+              <ul class="footer__column-links">          
+                <li><a class="footer__column-link" href="#">Главная</a></li>
+                <li><a class="footer__column-link" href="#">Концепция</a></li>
+                <li><a class="footer__column-link" href="#">Наставники</a></li>
+              </ul>
+	    </nav>
           </div>
         <div class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
-          <ul class="footer__column-links">
-            <!-- в брифе есть этот блок, но нет правил его нэйминга, поэтому я назвал его "footer__column-link"-->
-            <li>
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="фб_лого">Facebook
-              </a>
-            </li>            
-            <li>
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="images/vk_color_white.svg" alt= "вк_лого">ВКонтакте
-              </a>
-            </li>
-            <li>
-              <a class="footer__column-link">
-                <img class="footer__social-icon" src="images/instagram_color_white.svg" alt= "иг_лого">Instagram
-              </a>
-            </li>
-          </ul>
+	  <nav>
+            <ul class="footer__column-links">
+              <!-- в брифе есть этот блок, но нет правил его нэйминга, поэтому я назвал его "footer__column-link"-->
+              <li>
+                <a class="footer__column-link">
+                  <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="фб_лого">Facebook
+                </a>
+              </li>            
+              <li>
+                <a class="footer__column-link">
+                  <img class="footer__social-icon" src="images/vk_color_white.svg" alt= "вк_лого">ВКонтакте
+                </a>
+              </li>
+              <li>
+                <a class="footer__column-link">
+                  <img class="footer__social-icon" src="images/instagram_color_white.svg" alt= "иг_лого">Instagram
+                </a>
+              </li>
+            </ul>
+	  </nav>
         </div>
       </div>
       
