--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-   <link rel="stylesheet" href="styles/normalize.css">
-   <link rel="stylesheet" href="styles/style.css">
+   <link rel="stylesheet" href="vendor/normalize.css">
+   <link rel="stylesheet" href="blocks/description/description.css">
+   <link rel="stylesheet" href="blocks/digits/digits.css">
+   <link rel="stylesheet" href="blocks/feynman/feynman.css">
+   <link rel="stylesheet" href="blocks/footer/footer.css">
+   <link rel="stylesheet" href="blocks/header/header.css">
+   <link rel="stylesheet" href="blocks/kaufman/kaufman.css">
+   <link rel="stylesheet" href="blocks/logo/logo.css">
+   <link rel="stylesheet" href="blocks/page/page.css">
+   <link rel="stylesheet" href="blocks/section-subtitle/section-subtitle.css">
+   <link rel="stylesheet" href="blocks/section-title/section-title.css">
+   <link rel="stylesheet" href="blocks/table/table.css">
+   <link rel="stylesheet" href="blocks/two-columns/two-columns.css">
+   <link rel="stylesheet" href="blocks/cards/cards.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="page">
@@ -32,6 +45,40 @@
             </li>
           </ul>
         </section>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+          <li class="cards__item">
+            <img src="images/cards-attention.png" alt="google" class="cards__image">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеяное мышление</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-recall.png" alt="google" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-interliving.png" alt="google" class="cards__image">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-question.png" alt="google" class="cards__image">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img src="images/cards-competence.png" alt="google" class="cards__image">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+          <li class="cards__item">
+            
+          </li>
+        </ul>
       </section>
 
       <section class="digits">
