--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-   <link rel="stylesheet" href="vendor/normalize.css">
-   <link rel="stylesheet" href="blocks/cards/index.css">
-   <link rel="stylesheet" href="blocks/description/index.css">
-   <link rel="stylesheet" href="blocks/digits/index.css">
-   <link rel="stylesheet" href="blocks/feynman/index.css">
-   <link rel="stylesheet" href="blocks/footer/index.css">
-   <link rel="stylesheet" href="blocks/header/index.css">
-   <link rel="stylesheet" href="blocks/kaufman/index.css">
-   <link rel="stylesheet" href="blocks/logo/index.css">
-   <link rel="stylesheet" href="blocks/page/index.css">
-   <link rel="stylesheet" href="blocks/section-subtitle/index.css">
-   <link rel="stylesheet" href="blocks/section-title/index.css">
-   <link rel="stylesheet" href="blocks/table/index.css">
-   <link rel="stylesheet" href="blocks/techniques/index.css">
-   <link rel="stylesheet" href="blocks/two-columns/index.css">
-   <link rel="stylesheet" href="blocks/khan/index.css">
-   <link rel="stylesheet" href="blocks/video/index.css">
-   <link rel="stylesheet" href="blocks/oakley/index.css">
-   <link rel="stylesheet" href="blocks/resourses/index.css">
-   <link rel="stylesheet" href="blocks/rotation/rotation.css">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="page">
