--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-   <link rel="stylesheet" href="index.css">
+   <link rel="stylesheet" href="./pages/index.css">
 </head>
+<!--Файлы index.css на уровне блоков нужны для того, чтобы модификаторы работали (иначе глобальные стили их перебивают). 
+  Подобный способ решения этой проблемы предложила наша кураторша. Вот что она написала в Slack:
+  "Определить на уровне блока файл index.css в который складывать все стили, относящиеся к блоку и импортировать уже его в финальный index.css"-->
+<!--Я не совсем понял, о каком отступе у "картинки с мальчиком" идёт речь. Он должен быть прижат к нижнему правому углу. (Я так и сделал)-->
 <body>
   <div class="page">
    <header class="header">
@@ -73,8 +77,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video__iframe"></iframe>
         </div>
       </section>
 
@@ -140,12 +144,12 @@
 
       <section class="khan">
         <div class="khan__container">
-           <h3 class="khan__author">Салман Хан</h3>
+           <p class="khan__author">Салман Хан</p>
            <h2 class="khan__title">Весь мир - школа</h2>
            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
            <h3 class="khan__quote-author">Джордж Лукас</h3>
            <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
-           <div class="khan__block-container">
+           <div class="khan__book-container">
              <img src="images/khan-book.jpg" alt="обложка книги" class="khan__book-pic">
              <a href="#" class="khan__buy-link">Купить книгу&rarr;</a>
          </div>
@@ -199,7 +203,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src=images/kaufman-triangle.svg alt="треугольник" class="kaufman__triangle rotation">
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resourses">
@@ -222,7 +226,7 @@
           <p class="footer__author"> — &copy;2020. Гантимуров Юрий</p>
         </div>          
           <div class="footer__column footer__column_content_info">
-            <h5 class="footer__column-heading">о Практикуме</h5>
+            <h5 class="footer__column-heading">О Практикуме</h5>
             <nav>
               <ul class="footer__column-links">          
                 <li><a class="footer__column-link" href="#">Главная</a></li>
@@ -237,17 +241,17 @@
             <ul class="footer__column-links">
               <!-- в брифе есть этот блок, но нет правил его нэйминга, поэтому я назвал его "footer__column-link"-->
               <li>
-                <a class="footer__column-link">
+                <a class="footer__column-link" href="#">
                   <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="фб_лого">Facebook
                 </a>
               </li>            
               <li>
-                <a class="footer__column-link">
+                <a class="footer__column-link" href="#">
                   <img class="footer__social-icon" src="images/vk_color_white.svg" alt= "вк_лого">ВКонтакте
                 </a>
               </li>
               <li>
-                <a class="footer__column-link">
+                <a class="footer__column-link" href="#">
                   <img class="footer__social-icon" src="images/instagram_color_white.svg" alt= "иг_лого">Instagram
                 </a>
               </li>
